#1- fix .menu in shared.css/ buttons center top fixed w/ 100 z-index #2 tweak <form>,<h2>, & <span> content and style #3 - add animations.css to complete assignment

--- a/CSS/animations.css
+++ b/CSS/animations.css
@@ -6,8 +6,8 @@
 	font: bold 12px/18px sans-serif;
 	text-align: center;
 	display: inline;
-	margin: 0 auto;
-	padding: 0%;
+	margin: 0% auto;
+	padding: 0;
 	list-style: none;
 	text-decoration: none;
 }
@@ -49,4 +49,59 @@
 	border: 1px solid #021a40;
 	background-color: #ff0;
 	box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.7);
+}
+
+.photo-container {
+	text-align: center;
+	margin: 15px auto;
+	width: 300px;
+	height: 169px;
+}
+
+.photo-container img {
+	max-width: 100%;
+	width: 300px;
+	height: 169px;
+}
+
+.photo-overlay {
+	color: #fff;
+	position: absolute;
+	top: 0%;
+	right: 0%;
+	bottom: 0%;
+	left: 0%;
+	padding-left: 20px;
+	padding-right: 20px;
+	justify-content: center; /* for centering text inside .photo-overlay */
+	align-items: center;
+	background: rgba(0, 0, 0, 0.5);
+}
+
+.white-head {
+	color: #c9bdaa;
+	margin-top: 5%;
+}
+
+/* ====================================================
+			PHOTO-OVERLAY TRANSITIONS
+===================================================== */
+.photo-overlay {
+	opacity: 0;
+	transition: opacity .5s;
+	border-radius: 10px;
+	cursor: pointer;
+}
+
+.photo-overlay:hover {
+	opacity: 1;
+}
+
+.photo img {
+	transition: transform .5s;
+	transform-origin: 50% 50%;
+}
+
+.photo:hover img {
+	transform: scale(1.1);
 }
