--- a/CSS/shared.css
+++ b/CSS/shared.css
@@ -62,8 +62,8 @@ h2 {
 }
 
 h3 {
-	line-height: 30px;
-	padding-bottom: 20px;
+	line-height: 20px;
+	padding-bottom: 5px;
 }
 
 h4 {
@@ -76,8 +76,8 @@ h4 {
 
 p {
 	font-weight: 300;
-	line-height: 30px;
-	padding-bottom: 15px;
+	line-height: 20px;
+	padding-bottom: 20px;
 }
 
 .text-center {
@@ -142,8 +142,18 @@ section {
 	max-height: 340px;
 	/*-- this is how you center something: the (0%) value represents the top and bottom margin / the (auto) value represents the left and right margin --*/
 	margin: 0 auto;
-	content: " ";
 	width: 100%;
+	z-index: 100; /* top most layer */
+}
+
+.menu-container ul {
+	width: 100%;
+	margin: 0 auto;
+}
+
+.menu {
+	margin: 0 auto;
+	widows: 100%;
 	position: fixed;
 	z-index: 100;
 }
@@ -204,7 +214,7 @@ section {
 ================================================*/
 .flex-container {
 	display: -webkit-flex;
-	display: box;
+	display: flex;
 	flex-wrap: wrap;
 	padding: 10px;
 	border-radius: 8px;
@@ -234,10 +244,11 @@ section {
 	text-align: center;
 	margin: 0 auto;
 	color: #13161b;
-	font-weight: 500;
+	font-weight: 1000;
 	font-size: 1.5em;
 	letter-spacing: 0pt;
 	word-spacing: 0pt;
+	text-emphasis: bold;
 }
 
 .reservation h2 span {
@@ -246,14 +257,15 @@ section {
 	margin: 0 auto;
 	color: #13161b;
 	font-weight: 500;
-	font-size: 1.5em;
+	font-size: 1em;
 	font-variant: small-caps;
-	letter-spacing: .4pt;
-	word-spacing: .3pt;
+	letter-spacing: .3pt;
+	word-spacing: 0pt;
 }
 
 .reservation p {
 	color: #13161b;
+	text-align: center;
 	width: 50%;
 	margin: 0 auto;
 }
@@ -271,6 +283,7 @@ section {
 	background: rgb(227, 222, 222);
 	box-shadow: 2px 3px 3px 0px rgba(0, 0, 0, 0.3);
 	font-family: "Raleway", sans-serif;
+	margin: 0 auto;
 }
 
 .reservation input[type="text"] {
@@ -284,7 +297,7 @@ section {
 	border-right: 2px solid #424549;
 	border-bottom: 2px solid #424549;
 	border-left: 1px solid #090b0d;
-	margin: 10px 1em;
+	margin: 10px auto;
 	border-radius: 7px;
 	background: #13161b;
 	box-shadow: inset 0px 3px 0px 0px rgba(5, 5, 5, 0.15);
@@ -300,8 +313,7 @@ section {
 }
 
 .terms {
-	margin: 30px 1px 0 0;
-	padding-left: 52px;
+	padding-left: 59px;
 	font-size: 14px;
 	line-height: 5px;
 	color: #000000;
@@ -310,7 +322,9 @@ section {
 	font-weight: 600;
 	position: relative;
 	display: inline;
+	float: inline-end;
 	margin-top: 13%;
+	margin: 75% 1% auto;
 }
 
 .terms:hover {
@@ -322,4 +336,33 @@ section {
 	color: rgb(225, 225, 225);
 	cursor: pointer;
 	border: none;
+	font-weight: 900;
+	outline: none;
+	text-align: center;
+	font-family: "Raleway", sans-serif;
+	margin: 0px 3%;
+	padding: 7px 0px;
+	width: 25%;
+	font-size: 18px;
+	transition: border-color 0.3s color 0.3s background-color 0.3s;
+	border-radius: 7px;
+	background-color: #797a7b;
+	box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.3);
+}
+
+.submit input[type="submit"]:hover {
+	color: #000;
+	background-color: #8d8e8f;
+	box-shadow: inset 1px 2px 15px 0 rgba(0, 0, 0, 0.5);
+}
+
+/* ========================================================
+			FOOTER STYLES
+======================================================= */
+#footer {
+	background-color: rgba(100, 65, 0, .3);
+	color: #000000;
+	text-shadow: 2px 2px 8px 0 (0, 0, 0, 0.4);
+	padding: 20px 50px 20px 50px;
+	text-align: right;
 }
